          qpp::exception::NotImplemented  - code not yet implemented
          qpp::exception::InvalidIterator - invalid iterator (not initialized,
                                            past end, etc.)
    - Added std::string qpp::Gates::get_name(const cmat&) function which returns
      the names of the most common (one, two and three) qubit gates
    - Added new classes in the new header file "classes/circuits.h" for
      simulating qudit quantum circuits:
          - qpp::QCircuitDescription - Quantum circuit description, does not
                                       effectively perform any operations
          - qpp::IQCircuit           - Abstract base class for quantum circuits
          - qpp::QCircuit            - Concrete class for simulation of
                                       noiseless quantum circuits
      BE AWARE: this is (still) work in progress, not yet complete, bugs may
      still lingering around
    - Added new circuit simulator examples in "examples/circuits":
          - teleport_qubit_circuit.cpp - qubit teleportation circuit example
          - teleport_qudit_circuit.cpp - qudit teleportation circuit example

Version 1.1 - 26 November 2018
    - Added new functions in "operations.h":
          qpp::QFT()      - qudit quantum Fourier transform (includes qubit
                            QFT as a special case) on an entire quantum state
                            (state vector or density matrix)
          qpp::applyQFT() - qpply the qudit quantum Fourier transform on a
                            subset of qudits of a state vector or density matrix
    - Added Quantum Fourier transform example in "examples/qft.cpp"
    - Added new member functions for qpp::Gates:
          qpp::Gates::RX()   - rotation around X
          qpp::Gates::RY()   - rotation around Y
          qpp::Gates::RZ()   - rotation around Z
          qpp::Gates.SWAPd() - qudit SWAP gate